test : trade 예외 케이스 테스트 코드 작성 (mocking, 케이스 구체화)